cabal-version: 2.2
name: hpc-bin
version: 0.68
license: BSD-3-Clause
license-File: LICENSE
copyright: (c) Andy Gill, Colin Runciman
author: Andy Gill, Colin Runciman
maintainer: XXX
synopsis: Hpc is a tool for generating coverage reports in various output formats for Haskell projects.
description: Hpc is a tool for generating coverage reports in various output formats for Haskell projects.
category: Development
bug-reports: https://gitlab.haskell.org/hpc/hpc-bin/-/issues
extra-source-files: README.md
                  , CHANGELOG.md
build-type: Simple

source-repository head
    type:     git
    location: https://gitlab.haskell.org/hpc/hpc-bin.git

Flag build-tool-depends
    Description: Use build-tool-depends
    Default: True

executable hpc
    Default-Language: Haskell2010
    hs-source-dirs: src
    Main-Is: HpcMain.hs
    Other-Modules: HpcParser
                   HpcCombine
                   HpcDraft
                   HpcFlags
                   HpcLexer
                   HpcMarkup
                   HpcOverlay
                   HpcReport
                   HpcShowTix
                   HpcUtils
                   Paths_hpc_bin

    autogen-modules: Paths_hpc_bin

    Build-Depends: base       >= 4   && < 5,
                   directory  >= 1   && < 1.4,
                   filepath   >= 1   && < 1.5,
                   containers >= 0.1 && < 0.7,
                   array      >= 0.1 && < 0.6,
                   hpc        >= 0.6.1 && < 0.7

    if flag(build-tool-depends)
      build-tool-depends: happy:happy >= 1.20.0
