cabal-version: 2.2
name: hpc-bin
version: 0.68
license: BSD-3-Clause
license-File: LICENSE
copyright: (c) Andy Gill, Colin Runciman
author: Andy Gill, Colin Runciman
maintainer: XXX
synopsis: Hpc is a tool for generating coverage reports in various output formats for Haskell projects.
description: Hpc is a tool for generating coverage reports in various output formats for Haskell projects.
category: Development
bug-reports: https://gitlab.haskell.org/hpc/hpc-bin/-/issues
extra-source-files: README.md
                  , CHANGELOG.md
build-type: Simple

source-repository head
    type:     git
    location: https://gitlab.haskell.org/hpc/hpc-bin.git

Flag build-tool-depends
    Description: Use build-tool-depends
    Default: True

executable hpc
    default-language: Haskell2010
    hs-source-dirs:
      app,
      src
    main-is: Main.hs
    other-modules: HpcParser
                   HpcCombine
                   HpcDraft
                   HpcFlags
                   HpcLexer
                   HpcMarkup
                   HpcOverlay
                   HpcReport
                   HpcShowTix
                   HpcUtils
                   HpcMain
                   Paths_hpc_bin
    autogen-modules: Paths_hpc_bin

    build-depends: base       >= 4   && < 5,
                   deepseq    >= 1.4.4 && < 1.5,
                   directory  >= 1   && < 1.4,
                   filepath   >= 1   && < 1.5,
                   containers >= 0.1 && < 0.7,
                   array      >= 0.1 && < 0.6,
                   hpc        >= 0.6.2 && < 0.8

    if flag(build-tool-depends)
      build-tool-depends: happy:happy >= 1.20.0


test-suite hpc-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Paths_hpc_bin
  autogen-modules:
      Paths_hpc_bin
  hs-source-dirs:
      test
  build-tool-depends: hpc-bin:hpc
  build-depends:
      base         >= 4   && < 5
    , directory    >= 1   && < 1.4
    , filepath      >= 1   && < 1.5
    , process
    , tasty
    , tasty-golden
    , tasty-hunit
    , text
    , utf8-string
  default-language: Haskell2010
